--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,97 @@
-colpali-engine>=0.3.4,<0.4.0
-ml-dtypes
+accelerate==1.5.2
+aiohappyeyeballs==2.6.1
+aiohttp==3.11.13
+aiosignal==1.3.2
+annotated-types==0.7.0
+anthropic==0.49.0
+anyio==4.8.0
+async-timeout==5.0.1
+attrs==25.3.0
+beautifulsoup4==4.13.3
+blinker==1.9.0
+Byaldi==0.0.7
+catalogue==2.0.10
+certifi==2025.1.31
+charset-normalizer==3.4.1
+claudette==0.1.4
+click==8.1.8
+colorama==0.4.6
+colpali_engine==0.3.8
+datasets==3.4.0
+dill==0.3.8
+distro==1.9.0
+eval_type_backport==0.2.2
+exceptiongroup==1.2.2
+fastcore==1.7.29
+filelock==3.18.0
+Flask==3.1.0
+flask-cors==5.0.1
+frozenlist==1.5.0
+fsspec==2024.12.0
+GPUtil==1.4.0
+h11==0.14.0
+html2text==2024.2.26
+httpcore==1.0.7
+httpx==0.28.1
+huggingface-hub==0.29.3
+idna==3.10
+itsdangerous==2.2.0
+Jinja2==3.1.6
+jiter==0.9.0
+joblib==1.4.2
+jsonlines==4.0.0
+llms-txt==0.0.4
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+mdurl==0.1.2
+ml_dtypes==0.5.1
+mpmath==1.3.0
+msglm==0.0.6
 mteb==1.6.35
-ninja
-pdf2image
-byaldi
-srsly
-torch
-flask
-flask_cors
-claudette
-PyPDF2
-transformers>=4.42.0
-PyMuPDF
-neo4j
-anthropic>=0.15.0
-json5
+multidict==6.1.0
+multiprocess==0.70.16
+neo4j==5.28.1
+networkx==3.4.2
+ninja==1.11.1.3
+numpy>2.0
+packaging==24.2
+pandas==2.2.3
+pdf2image==1.17.0
+peft==0.14.0
+pillow==11.1.0
+propcache==0.3.0
+psutil==7.0.0
+pyarrow==19.0.1
+pydantic==2.10.6
+pydantic_core==2.27.2
+Pygments==2.19.1
+PyMuPDF==1.25.4
+PyPDF2==3.0.1
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+pytrec-eval-terrier==0.5.6
+pytz==2025.1
+PyYAML==6.0.2
+regex==2024.11.6
+requests==2.32.3
+rich==13.9.4
+safetensors==0.5.3
+scikit-learn==1.6.1
+scipy==1.15.2
+sentence-transformers==3.4.1
+six==1.17.0
+sniffio==1.3.1
+soupsieve==2.6
+srsly==2.5.1
+sympy==1.13.1
+threadpoolctl==3.6.0
+tokenizers==0.21.1
+toolslm==0.1.0
+tqdm==4.67.1
+transformers==4.47.1
+typing_extensions==4.12.2
+tzdata==2025.1
+urllib3==2.3.0
+Werkzeug==3.1.3
+xxhash==3.5.0
+yarl==1.18.3
