--- a/requirements.txt
+++ b/requirements.txt
@@ -53,7 +53,7 @@ multiprocess==0.70.16
 neo4j==5.28.1
 networkx==3.4.2
 ninja==1.11.1.3
-numpy>2.0
+numpy<2.0
 packaging==24.2
 pandas==2.2.3
 pdf2image==1.17.0
